--- a/scss/style.css
+++ b/scss/style.css
@@ -9620,6 +9620,12 @@ body {
 .hh:hover .text1 {
   display: none; }
 
+.btm-right {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+  font-size: 0.8rem; }
+
 .hero-slider-wrapper {
   position: relative;
   z-index: 5; }
@@ -9660,25 +9666,6 @@ body {
           left: -10%; } }
       .hero-slider-wrapper .item .content p {
         font-weight: 100; }
-      .hero-slider-wrapper .item .content h2 {
-        font-weight: 600;
-        line-height: 110px;
-        font-size: 80px;
-        letter-spacing: 1px;
-        line-height: 1;
-        margin-bottom: 20px;
-        font-weight: 900; }
-        .hero-slider-wrapper .item .content h2 span {
-          clip-path: inset(0 100% 0 0); }
-        @media (max-width: 1200px) {
-          .hero-slider-wrapper .item .content h2 {
-            font-size: 60px;
-            line-height: 70px;
-            letter-spacing: 1px; } }
-        @media (max-width: 767px) {
-          .hero-slider-wrapper .item .content h2 {
-            font-size: 35px;
-            line-height: 40px; } }
       .hero-slider-wrapper .item .content h3 {
         margin-bottom: 95px;
         letter-spacing: 2px;
@@ -9745,12 +9732,6 @@ body {
     right: 6%;
     bottom: 5%; }
 
-.content_2 h2 {
-  color: black;
-  text-transform: uppercase;
-  font-size: 84px;
-  font-weight: 900; }
-
 .content_2 h3 {
   color: black;
   font-size: 1.5rem;
@@ -9798,15 +9779,9 @@ body {
       overflow: hidden; }
 
 .mission {
-  position: relative;
-  padding: 185px 0 170px 0;
-  margin-bottom: 170px; }
-  @media (max-width: 991px) {
-    .mission {
-      padding: 100px 0 0 0; } }
+  position: relative; }
   @media (max-width: 575px) {
     .mission {
-      padding: 100px 0 50px 0;
       margin-bottom: 0; } }
   .mission .bg {
     position: absolute;
@@ -9929,16 +9904,8 @@ body {
         .mission-content .video iframe {
           min-height: 350px; } }
 .vision {
-  padding: 0px 0 100px 0;
   overflow: hidden;
-  background: white;
-  padding: 90px 0; }
-  @media (max-width: 991px) {
-    .vision {
-      padding: 50px 0; } }
-  @media (max-width: 767px) {
-    .vision {
-      padding: 70px 0; } }
+  background: white; }
   .vision a:hover {
     color: white; }
   .vision .card {
