--- a/scss/style.css
+++ b/scss/style.css
@@ -6,6 +6,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,700&display=swap");
 :root {
   --blue:#007bff;
   --indigo:#6610f2;
@@ -9283,18 +9284,22 @@ li.fancybox-thumbs-loading {
 
 body {
   line-height: 1.5;
-  font-family: "Be Vietnam Pro", sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased; }
 
 p {
-  font-family: "Be Vietnam Pro", sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #000;
   font-size: 16px;
   letter-spacing: 1px; }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Be Vietnam Pro", sans-serif;
+h1, h3, h4, h5, h6 {
+  font-family: "Lato", sans-serif;
   color: #000; }
+
+h2 {
+  font-family: "Lato", sans-serif;
+  color: #534CA0; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 600; }
@@ -9310,6 +9315,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .f-900 {
   font-weight: 900 !important; }
+
+.text-blue {
+  color: #534CA0; }
+
+.text-green {
+  color: #24A49B; }
 
 .title-case h2 {
   font-size: 84px;
@@ -9530,22 +9541,28 @@ body {
   margin-top: -10px; }
 
 #main-nav .navbar-nav {
-  align-self: center; }
+  align-self: center;
+  font-family: "Lato", sans-serif; }
   @media (max-width: 991px) {
     #main-nav .navbar-nav {
       text-align: center; } }
   #main-nav .navbar-nav .nav-item .nav-link {
     padding-right: 25px;
     padding-left: 25px;
-    color: #1b4568;
+    color: #1A4568;
     font-size: 20px;
-    font-weight: 100;
+    font-weight: bold;
     letter-spacing: 2px;
     text-transform: capitalize;
     text-decoration: none; }
+  #main-nav .navbar-nav .nav-item .text-green {
+    color: #24A49B; }
+  #main-nav .navbar-nav .nav-item .text-green:hover {
+    text-decoration: underline; }
   #main-nav .navbar-nav .nav-item .active {
     color: #02FD34;
-    text-decoration-color: white; }
+    text-decoration-color: white;
+    text-decoration: underline; }
   #main-nav .navbar-nav .music-icon {
     padding-left: 55px;
     padding-right: 25px; }
@@ -9671,7 +9688,7 @@ body {
         letter-spacing: 2px;
         font-weight: 400;
         font-size: 20px;
-        font-family: "Be Vietnam Pro", sans-serif; }
+        font-family: "Poppins", sans-serif; }
         @media (max-width: 1200px) {
           .hero-slider-wrapper .item .content h3 {
             font-size: 20px;
@@ -9767,7 +9784,7 @@ body {
     position: relative;
     font-size: 13px;
     margin-top: 20px;
-    font-family: "Be Vietnam Pro", sans-serif; }
+    font-family: "Poppins", sans-serif; }
     .scroll h6::before {
       position: absolute;
       content: '';
@@ -10029,6 +10046,25 @@ body {
   @media (max-width: 767px) {
     .vision-slider-wrapper .slick-prev {
       bottom: 0; } }
+#story .bg {
+  position: relative; }
+
+#story .bg::before {
+  content: " ";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/type/a3.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(5px);
+  z-index: 0; }
+
+#story img {
+  position: relative; }
+
 .lb-container {
   background: black; }
 
