deploy: 14e6ea53570613be945805337f4230fc445f0c70

--- a/scss/style.css
+++ b/scss/style.css
@@ -9406,6 +9406,11 @@ label {
 .btn-primary {
   background-color: #24A49B; }
 
+.btn-primary:hover {
+  color: #24A49B;
+  background-color: transparent;
+  border-color: #24A49B; }
+
 .btn-round-small {
   width: 2rem;
   height: 2rem;
