deploy: e16b27c8b3ddb644d9d0fc6d418d3ff266d0739a

--- a/scss/style.css
+++ b/scss/style.css
@@ -9622,8 +9622,8 @@ body {
     #main-nav .navbar-nav {
       text-align: center; } }
   #main-nav .navbar-nav .nav-item .nav-link {
-    padding-right: 25px;
-    padding-left: 25px;
+    margin-right: 25px;
+    margin-left: 25px;
     color: #1A4568;
     font-size: 20px;
     font-weight: bold;
@@ -9635,9 +9635,9 @@ body {
   #main-nav .navbar-nav .nav-item .text-green:hover {
     text-decoration: underline; }
   #main-nav .navbar-nav .nav-item .active {
-    color: #02FD34;
     text-decoration-color: white;
-    text-decoration: underline; }
+    border-bottom: 2px solid #1A4568;
+    padding-bottom: 3px; }
   #main-nav .navbar-nav .music-icon {
     padding-left: 55px;
     padding-right: 25px; }
