deploy: fedbf3308a43bca8ca188909ae169352ebc2fc60

--- a/scss/style.css
+++ b/scss/style.css
@@ -10462,8 +10462,7 @@ img.hover-shadow {
 
 .contact {
   position: relative;
-  padding-top: 180px;
-  margin-bottom: 2em;
+  margin-bottom: 8rem;
   z-index: 1; }
   .contact i {
     color: white;
