--- a/scss/style.css
+++ b/scss/style.css
@@ -10654,6 +10654,38 @@ ul.social-list li a {
   font-size: 5rem;
   width: 100%; }
 
+.teams .bg-green {
+  min-height: 24rem; }
+
+.teams .text {
+  position: absolute;
+  top: 30%; }
+  .teams .text h2 {
+    font-size: 3.4rem;
+    color: #1A4568;
+    margin-bottom: 1.5rem; }
+  .teams .text h3 {
+    font-size: 2.8rem;
+    color: #F9F9F9;
+    font-weight: normal; }
+
+.teams img {
+  width: 30%;
+  position: absolute;
+  top: -20%; }
+
+.teams .text-left {
+  left: 50%; }
+
+.teams .img-left img {
+  left: 15%; }
+
+.teams .text-right {
+  right: 50%; }
+
+.teams .img-right img {
+  right: 15%; }
+
 #image-100 {
   margin: 0;
   width: 100%; }
