--- a/scss/style.css
+++ b/scss/style.css
@@ -9732,7 +9732,7 @@ body {
 .text1 {
   color: white;
   text-align: center;
-  font-size: 1.75rem;
+  font-size: 1.55rem;
   padding-top: 0.5rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -9744,13 +9744,18 @@ body {
   width: 100%;
   height: 40%;
   background-color: rgba(83, 76, 160, 0.6); }
-
+  @media (min-width: 1400px) {
+    .text1 {
+      font-size: 1.75rem; } }
 .text2 {
   display: none; }
 
 .text2 li {
-  font-size: 1.65rem;
+  font-size: 1.35rem;
   text-align: left; }
+  @media (min-width: 1400px) {
+    .text2 li {
+      font-size: 1.65rem; } }
   @media (min-width: 1600px) {
     .text2 li {
       font-size: 2.5rem; } }
