--- a/scss/style.css
+++ b/scss/style.css
@@ -9477,10 +9477,16 @@ body {
 .px-6 {
   padding-left: 5rem;
   padding-right: 5rem; }
-
+  @media (max-width: 575px) {
+    .px-6 {
+      padding-left: 1rem;
+      padding-right: 1rem; } }
 .pr-6 {
   padding-right: 5rem; }
-
+  @media (max-width: 575px) {
+    .pr-6 {
+      padding-left: 2rem;
+      padding-right: 2rem; } }
 .px-10 {
   padding-left: 10rem;
   padding-right: 10rem; }
@@ -10816,22 +10822,31 @@ ul.social-list li a {
   z-index: 55; }
   @media (max-width: 575px) {
     #btn-donate {
-      width: 3.875rem;
-      height: 3.875rem; } }
-  #btn-donate img {
+      width: 3.575rem;
+      height: 3.575rem; } }
+  #btn-donate svg {
     width: 90%; }
-
+    @media (max-width: 575px) {
+      #btn-donate svg {
+        width: 100%; } }
 footer {
   margin-top: 3rem;
   color: #383737;
   font-size: 1.1rem;
   padding: 0.5em 8em; }
+  @media (max-width: 767px) {
+    footer {
+      padding: 0.5em 1em;
+      font-size: 0.8rem; } }
   @media (min-width: 1600px) {
     footer {
       padding: 0.5em 10em;
       font-size: 1.25rem; } }
   footer .center {
     padding-left: 5rem; }
+    @media (max-width: 767px) {
+      footer .center {
+        padding-left: 1rem; } }
     @media (min-width: 1600px) {
       footer .center {
         padding-left: 10rem; } }
@@ -10841,6 +10856,9 @@ footer {
     margin-right: 1rem; }
   footer a {
     font-size: 1.25rem; }
+    @media (max-width: 575px) {
+      footer a {
+        font-size: 1rem; } }
     @media (min-width: 1600px) {
       footer a {
         font-size: 1.25rem; } }
