deploy: 9d743832ffde6f49e24b359873f6e72ab2ee52e4

--- a/scss/style.css
+++ b/scss/style.css
@@ -9645,14 +9645,18 @@ body {
     #main-nav .navbar-nav {
       text-align: center; } }
   #main-nav .navbar-nav .nav-item .nav-link {
-    margin-right: 25px;
-    margin-left: 25px;
     color: #1A4568;
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: bold;
     letter-spacing: 2px;
     text-transform: capitalize;
     text-decoration: none; }
+    @media (min-width: 1400px) {
+      #main-nav .navbar-nav .nav-item .nav-link {
+        font-size: 1.45rem; } }
+    @media (min-width: 1600px) {
+      #main-nav .navbar-nav .nav-item .nav-link {
+        font-size: 1.688rem; } }
   #main-nav .navbar-nav .nav-item .nav-link:hover {
     text-decoration-color: white;
     border-bottom: 2px solid #1A4568;
@@ -9680,8 +9684,10 @@ body {
       #main-nav .navbar-nav .hamburger-icon {
         display: none; } }
 .products p {
-  font-size: 1.6rem; }
-
+  font-size: 1rem; }
+  @media (min-width: 1400px) {
+    .products p {
+      font-size: 1.25rem; } }
 .products h2 {
   font-size: 1.875rem;
   text-transform: none;
@@ -9738,7 +9744,7 @@ body {
 .text1 {
   color: white;
   text-align: center;
-  font-size: 1.55rem;
+  font-size: 1.35rem;
   padding-top: 0.5rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -9768,7 +9774,7 @@ body {
 .hh:hover .text2 {
   color: white;
   text-align: left;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   padding-top: 1rem;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -9781,6 +9787,9 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(36, 164, 155, 0.5); }
+  @media (min-width: 1400px) {
+    .hh:hover .text2 {
+      font-size: 1.8rem; } }
   @media (min-width: 1600px) {
     .hh:hover .text2 {
       font-size: 2.7rem; } }
@@ -10321,7 +10330,7 @@ body {
     font-weight: normal; }
   #helmet .card {
     background: #24A49B;
-    min-height: 410px;
+    min-height: 450px;
     filter: drop-shadow(5px 8px 6px #90afc4); }
     @media (min-width: 1600px) {
       #helmet .card {
@@ -10424,26 +10433,26 @@ body {
   .contact i {
     color: white;
     font-size: 3rem; }
-  .contact form {
+  .contact .contact-form-ajax {
     padding-top: 20%;
     padding-bottom: 20%; }
     @media (min-width: 1400px) {
-      .contact form {
+      .contact .contact-form-ajax {
         padding-left: 6rem;
         padding-right: 9rem; } }
-    .contact form input, .contact form textarea {
+    .contact .contact-form-ajax input, .contact .contact-form-ajax textarea {
       border-radius: 16px; }
-    .contact form ::placeholder {
+    .contact .contact-form-ajax ::placeholder {
       /* Chrome, Firefox, Opera, Safari 10.1+ */
       color: #534CA0;
       opacity: 1;
       /* Firefox */
       padding-left: 1rem; }
-    .contact form :-ms-input-placeholder {
+    .contact .contact-form-ajax :-ms-input-placeholder {
       /* Internet Explorer 10-11 */
       color: #534CA0;
       padding-left: 2rem; }
-    .contact form ::-ms-input-placeholder {
+    .contact .contact-form-ajax ::-ms-input-placeholder {
       /* Microsoft Edge */
       color: #534CA0;
       padding-left: 1rem; }
@@ -10815,7 +10824,7 @@ ul.social-list li a {
 #btn-donate {
   padding: 1rem;
   position: fixed;
-  bottom: 30%;
+  bottom: 25%;
   right: 20px;
   width: 6.875rem;
   height: 6.875rem;
@@ -10824,6 +10833,9 @@ ul.social-list li a {
     #btn-donate {
       width: 3.575rem;
       height: 3.575rem; } }
+  @media (min-width: 1400px) {
+    #btn-donate {
+      bottom: 30%; } }
   #btn-donate svg {
     width: 90%; }
     @media (max-width: 575px) {
@@ -10833,11 +10845,13 @@ footer {
   margin-top: 3rem;
   color: #383737;
   font-size: 1.1rem;
-  padding: 0.5em 8em; }
+  padding: 0.5em 3em; }
   @media (max-width: 767px) {
     footer {
-      padding: 0.5em 1em;
-      font-size: 0.8rem; } }
+      padding: 0.5em 1em; } }
+  @media (min-width: 1400px) {
+    footer {
+      padding: 0.5em 8em; } }
   @media (min-width: 1600px) {
     footer {
       padding: 0.5em 10em;
